--- a/configs/FedOpt_MNIST_config.yaml
+++ b/configs/FedOpt_MNIST_config.yaml
@@ -1,7 +1,7 @@
 # This file serves as the configurations for the benchmarking experiments, including the basic configuration and the parameters for all attacks and defenses that are going to be tested. You can copy this file and modify it to run your own single attack and defense experiments.
 seed: 4 # seed for reproducibility
 # basic configuration
-epochs: 50 # global epochs (from ServerConfig.NUM_ROUNDS)
+epochs: 500 # global epochs (from ServerConfig.NUM_ROUNDS)
 algorithm: FedOpt # algorithm, FedSGD, FedAvg, FedOpt
 optimizer: SGD # optimizer for training
 momentum: 0.9
@@ -9,7 +9,8 @@ weight_decay: 5.0e-4
 lr_scheduler: StepLR # learning rate scheduler (from ClientTrainingConfig)
 milestones: [2, 4] # milestones for learning rate scheduler (step_size=2, gamma=0.95 for 5 local epochs)
 gamma: 0.95 # gamma for StepLR
-num_clients: 50 # number of participating clients
+num_clients: 200 # number of participating clients
+clients_per_round: 120 # number of clients participating per round (num_clients * participation_rate)
 batch_size: 32 # batch_size (from ClientTrainingConfig.BATCH_SIZE)
 learning_rate: 0.01 # clients' local learning rate (from ClientTrainingConfig.LEARNING_RATE)
 local_epochs: 5 # local global_epoch (from ClientTrainingConfig.LOCAL_EPOCHS)
@@ -243,7 +244,7 @@ dataset:
   name: MNIST
   root: ./data
   download: True
-  num_clients: 5
+  num_clients: 200
   distribution: non-iid
   num_shards: 200
 
@@ -274,8 +275,8 @@ defense:
     reputation_threshold: 0.8
 
 experiment:
-  epochs: 100
-  num_clients: 5
+  epochs: 500
+  num_clients: 200
   partial_participation: 0.6
   straggler_prob: 0.3
   straggler_delay: 2.0
@@ -286,7 +287,7 @@ attack:
   name: NoAttack
 
 logging:
-  communication_coeff: 1.0
+  communication_coeff: 0.05
   energy_coeff: 0.05
   verbose: True
 
